Se modifico estado de botones comprar y se agrego margin a boton de confirmar la compra

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,3 +72,6 @@ header {
     margin-left: auto;  /* Centra la imagen horizontalmente */
     margin-right: auto;
 }
+.btn-success {
+    margin:2rem;
+}
