--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,9 @@ body {
     background-position: center center;  /* Centra la imagen en el fondo */
     background-attachment: fixed;  /* Hace que la imagen no se mueva al hacer scroll */
     text-align: center;
+
+    /*font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif; */
+      
 }
 
 /* Estilo para el header */
